fix double border in account_history_info.html for tpl_modified_responsive
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@14366 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_responsive/stylesheet.css
+++ b/templates/tpl_modified_responsive/stylesheet.css
@@ -3106,7 +3106,11 @@ ul.orderlist li .orderlist_header {
   padding-top: 0px !important;
   margin-top: -4px;
 }
-
+ul.orderlist.account_history li .orderlist_header { 
+  border-top: 0px !important;
+  padding-top: 0px !important;
+  margin-top: -4px;
+}
 ul.orderlist li .orderlist_header span.ol_productsname {
   font-size:10px !important;
   line-height:18px;
